syntax = "proto3";
package protos;
option go_package = "user/delivery/grpc/protos";
import "google/protobuf/timestamp.proto";

service UserHandler {
    rpc GetUsers(FetchRequest) returns (stream User);
    rpc GetUser(SingleRequest) returns (User);
    rpc CreateUser(User) returns (User);
    rpc UpdateUser(User) returns (User);
    rpc DeleteUser(SingleRequest) returns (DeleteResponse);
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    int64 age = 4;
	google.protobuf.Timestamp CreatedAt = 5;
    google.protobuf.Timestamp UpdatedAt = 6;
}

message FetchRequest{
    int64 num=1;
    string cursor =2;
}

message SingleRequest{
    int64 id = 1;
}

message DeleteResponse{
    string status = 1;
    int32 code = 2;
}